# ZlibRust

./: Cargo.toml
benches/: testbench.rs
src/: adler32.rs  bitreader.rs  lib.rs  main.rs  zlib.rs  zlib_errors.rs
src/inflate/: lookup.rs  mod.rs
