[package]
name = "rustpng"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
criterion = "0.5.1"
anyhow = "1.0.79"
thiserror = "1.0.56"

# [dependencies.bevy]
# version = "0.12.1"
# features = ["dynamic_linking"]

[profile.dev]
opt-level = 0

[profile.dev.package."*"]
opt-level = 3

[profile.bench]
opt-level = 3

[[bench]]
name = "testbench"
harness = false
